--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "description": "Backend Project StickyNotes",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test PORT=3002 NODE_OPTIONS=--experimental-vm-modules npx jest --verbose --silent ./tests/notes.test.js",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "DarkMalk",
   "license": "ISC",
   "devDependencies": {
     "eslint": "8.22.0",
-    "nodemon": "2.0.19"
+    "jest": "^28.1.3",
+    "nodemon": "2.0.19",
+    "supertest": "^6.2.4"
   },
   "dependencies": {
-    "body-parser": "^1.20.0",
-    "cli-color": "^2.0.3",
-    "cors": "^2.8.5",
+    "bcrypt": "5.0.1",
+    "cors": "2.8.5",
+    "cross-env": "7.0.3",
     "dotenv": "16.0.1",
     "express": "4.18.1",
     "mongoose": "6.5.2"
@@ -28,5 +32,8 @@
     "semi": false,
     "trailingComma": "none",
     "printWidth": 120
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
