--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Backend Project StickyNotes",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test PORT=3002 NODE_OPTIONS=--experimental-vm-modules npx jest --verbose --silent",
+    "test": "cross-env NODE_ENV=test PORT=10000 jest --verbose ./tests/login.test.js --detectOpenHandles",
     "test:watch": "npm run test -- --watch"
   },
   "author": "DarkMalk",
   "license": "ISC",
   "devDependencies": {
     "eslint": "8.22.0",
-    "jest": "^28.1.3",
+    "jest": "28.1.3",
     "nodemon": "2.0.19",
-    "supertest": "^6.2.4"
+    "supertest": "6.2.4"
   },
   "dependencies": {
     "bcrypt": "5.0.1",
@@ -23,6 +23,7 @@
     "cross-env": "7.0.3",
     "dotenv": "16.0.1",
     "express": "4.18.1",
+    "jsonwebtoken": "8.5.1",
     "mongoose": "6.5.2"
   },
   "prettier": {
