--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test PORT=10000 jest --verbose ./tests/login.test.js --detectOpenHandles",
+    "test": "cross-env NODE_ENV=test PORT=3002 jest --verbose --silent",
     "test:watch": "npm run test -- --watch"
   },
   "author": "DarkMalk",
